# lusca

./: .gitattributes  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yaml  docs.yaml  feature.yaml
.github/workflows/: ci.yml  publish.yml  release.yml
crates/: Cargo.toml
docs/figs/: field_demo_latest  fit_demo_latest  timeseries_demo_latest
docs/figs/exp_demo_20250818-212244/: exp_demo.npz  replot_exp_demo.py
docs/figs/exp_demo_20250819-105426/: replot_exp_demo.py
docs/figs/field_demo_20250819-113622/: field_demo.npz  replot_field_demo.py
docs/figs/field_demo_20260506-124833/: field_demo.meta.json  replot_field_demo.py
docs/figs/fit_demo_20250819-113624/: fit_demo.npz  replot_fit_demo.py
docs/figs/fit_demo_20260506-124838/: fit_demo.meta.json  replot_fit_demo.py
docs/figs/poly_demo_20250818-212244/: replot_poly_demo.py
docs/figs/poly_demo_20250819-105427/: poly_demo.npz  replot_poly_demo.py
docs/figs/timeseries_demo_20250819-113620/: replot_timeseries_demo.py
docs/figs/timeseries_demo_20260506-124829/: replot_timeseries_demo.py  timeseries_demo.meta.json  timeseries_demo.npz
docs/figs/trig_demo_20250818-212243/: replot_trig_demo.py
docs/figs/trig_demo_20250819-105425/: replot_trig_demo.py  trig_demo.npz
src/: demo.ipynb
src/lusca/: 01_main.ipynb  __init__.py  mpl_freeze.py
src/lusca/render/: __init__.py  mpl.py
src/lusca/styles/: lusca.mplstyle
src/notebooks/: 01_main.ipynb  02_mpl.ipynb
src/tests/: electron_test.py  mpl_test.py
