[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lusca"
description = "A Jupyter magic command for creating reproducible matplotlib figures."
version = "0.1.0"
authors = [{ name = "evmckinney9" }]
requires-python = ">=3.9"
dependencies = ["numpy", "matplotlib"]

[project.optional-dependencies]
dev = ["ipykernel", "pylatexenc", "ipywidgets", "pre-commit"]
format = ["pre-commit", "ruff"]
test = ["pytest"]

[tool.ruff]
target-version = "py312"
fix = true
extend-include = ["*.ipynb"]

# pycodestyle, pyflakes, isort, pyupgrade, bugbear, docstrings
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D"]
# select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
