[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lusca"
description = "A Jupyter magic command for creating reproducible matplotlib figures."
version = "0.1.0"
authors = [{ name = "evmckinney9" }]
requires-python = ">=3.9"
dependencies = ["numpy", "matplotlib"]

[project.optional-dependencies]
dev = ["ipykernel", "pylatexenc", "ipywidgets", "pre-commit"]
format = ["pre-commit", "ruff"]
test = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["lusca*"]

[tool.setuptools.package-data]
lusca = ["styles/**/*.mplstyle"]

[tool.ruff]
target-version = "py312"
fix = true
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["D"]
ignore = ["D105"] # magic methods like __init__ don't need docstrings

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["D"]
"src/tests/**/*.py" = ["D1"]
"**/*.ipynb" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
