[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lusca"
description = "A Jupyter magic command for creating reproducible matplotlib figures."
version = "0.1.2"
authors = [{ name = "Evan McKinney", email = "evmckinney9@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "jupyter",
    "ipython-magic",
    "matplotlib",
    "reproducibility",
    "figures",
    "scientific-plotting",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Framework :: Matplotlib",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = ["numpy", "matplotlib"]

[project.urls]
Homepage = "https://github.com/evmckinney9/lusca"
Repository = "https://github.com/evmckinney9/lusca"
Issues = "https://github.com/evmckinney9/lusca/issues"

[project.optional-dependencies]
dev = ["ipykernel", "pylatexenc", "ipywidgets", "pre-commit"]
format = ["pre-commit", "ruff"]
test = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["lusca*"]

[tool.setuptools.package-data]
lusca = ["styles/**/*.mplstyle"]

[tool.ruff]
target-version = "py312"
fix = true
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["D"]
ignore = ["D105"] # magic methods like __init__ don't need docstrings

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["D"]
"src/tests/**/*.py" = ["D1"]
"**/*.ipynb" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
